tests/baselines/reference/LogicalNotExpression1.errors.txt
==== tests/cases/compiler/logicalNotExpression1.ts (1 errors) ====
    !foo;
     ~~~
!!! logicalNotExpression1.ts(1,2): error TS2095: Could not find symbol 'foo'.